--- a/autoportret.html
+++ b/autoportret.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
         <title>Milica Petković - Autoportret</title>
         <link rel="stylesheet" href="style.css">
     </head>	
     <body>
         <div id="main">
             <div id="autoportret-vrh">
+                <button class="hamburger">&#9776;</button>
                 <nav id="navigacija">
                     <div class="nav-item"> <a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item"><a href="galerija.html">galerija</a></div>
