--- a/homepage.html
+++ b/homepage.html
@@ -7,13 +7,9 @@
     <body>
         <div id="main">
             <div id="pocetna-vrh">
+                <button class="hamburger">&#9776;</button>
                 <nav id="navigacija">
                     <div class="nav-item"> <a href="" id="meni-dugme">meni</a></div>
-                    <!--<div id="hamburger">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>-->
                     <div class="nav-item"><a href="galerija.html">galerija</a></div>
                     <div class="nav-item" id="logo"><a href="homepage.html">MILICA PETKOVIĆ</a></div>
                     <div class="nav-item"><a href="omeni.html">o meni</a></div>
@@ -47,7 +43,7 @@
                 <p>Svaka saradnja je prilika da zajedno kreiramo nešto posebno, u čemu će se odraziti tvoj brend, ideja ili priča. 
                 <br>Bez obzira na to da li želiš da osvežiš vizuelni identitet brenda, zabeležiš važne momente ili stvoriš autentične portrete, radim sa klijentima koji žele da njihove fotografije komuniciraju više od onoga što je odmah očigledno.<br>
                 Ako želiš da pričamo o tvojoj ideji, slobodno se javi, tu sam da zajedno stvorimo nešto što će trajati!</p>
-                <h4>KONTAKT</h4>
+                <h4><a href="kontakt.html">KONTAKT</a></h4>
             </div>
             
             <footer>
