--- a/modna.html
+++ b/modna.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
         <title>Milica Petković - Modna</title>
         <link rel="stylesheet" href="style.css">
     </head>	
     <body>
         <div id="main">
             <div class="modna">
+                <button class="hamburger-z">&#9776;</button>
                 <nav id="navigacija-zeleno">
                     <div class="nav-item-z"><a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item-z"><a href="galerija.html">galerija</a></div>
@@ -36,29 +38,14 @@
                         <div class="column-rekmodrez">
                             <img src="Slike/modna/GI34-2021 moda 1.jpg" style="width:100%">
                             <img src="Slike/modna/DSCN0194.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                         <div class="column-rekmodrez">
                             <img src="Slike/modna/GI34-2021 moda 3.jpg" style="width:100%">
                             <img src="Slike/modna/DSCN0207.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                         <div class="column-rekmodrez">
                             <img src="Slike/modna/GI34-2021 moda 2.jpg" style="width:100%">
                             <img src="Slike/modna/DSCN0131.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                     </div>
                 </div>
