--- a/reklamna.html
+++ b/reklamna.html
@@ -7,6 +7,7 @@
     <body>
         <div id="main">
             <div class="reklamna">
+                <button class="hamburger-z">&#9776;</button>
                 <nav id="navigacija-zeleno">
                     <div class="nav-item-z"><a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item-z"><a href="galerija.html">galerija</a></div>
@@ -36,29 +37,14 @@
                         <div class="column-rekmodrez">
                             <img src="Slike/reklamna/DSC_0502.jpg" style="width:100%">
                             <img src="Slike/reklamna/_DSC0052.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                         <div class="column-rekmodrez">
                             <img src="Slike/reklamna/GI34-2021 kontra2.jpg" style="width:100%">
                             <img src="Slike/reklamna/24.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                         <div class="column-rekmodrez">
                             <img src="Slike/reklamna/DSC_0512.jpg" style="width:100%">
                             <img src="Slike/reklamna/_DSC0051.jpg" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
-                            <img src="" style="width:100%">
                         </div>
                     </div>
                 </div>
