--- a/rezirana.html
+++ b/rezirana.html
@@ -7,6 +7,7 @@
     <body>
         <div id="main">
             <div class="rezirana">
+                <button class="hamburger-z">&#9776;</button>
                 <nav id="navigacija-zeleno">
                     <div class="nav-item-z"><a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item-z"><a href="galerija.html">galerija</a></div>
