--- a/hekly.html
+++ b/hekly.html
@@ -7,6 +7,7 @@
     <body>
         <div id="main">
             <div id="hekly-vrh">
+                <button class="hamburger">&#9776;</button>
                 <nav id="navigacija">
                     <div class="nav-item"> <a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item"><a href="galerija.html">galerija</a></div>
@@ -48,9 +49,6 @@
                         <img src="Slike/hekly/_DSC0055.jpg" style="width:100%">
                         <img src="Slike/hekly/_DSC0762.jpg" style="width:100%">
                         <img src="Slike/hekly/IMG_3753.jpg" style="width:100%">
-                        <img src="" style="width:100%">
-                        <img src="" style="width:100%">
-                        <img src="" style="width:100%">
                     </div>
                     <div class="column-h">
                         <img src="Slike/hekly/_DSC09856.jpg" style="width:100%">
@@ -58,17 +56,12 @@
                         <img src="Slike/hekly/_DSC0127.jpg" style="width:100%">
                         <img src="Slike/hekly/_DSC01589.jpg" style="width:100%">
                         <img src="Slike/hekly/_DSC0072.jpg" style="width:100%">
-                        <img src="" style="width:100%">
-                        <img src="" style="width:100%">
                     </div>
                     <div class="column-h">
                         <img src="Slike/hekly/_DSC0458.jpg" style="width:100%">
                         <img src="Slike/hekly/_DSC0085.jpg" style="width:100%">
                         <img src="Slike/hekly/IMG_3750.jpg" style="width:100%">
                         <img src="Slike/hekly/_DSC0101.jpg" style="width:100%">
-                        <img src="" style="width:100%">
-                        <img src="" style="width:100%">
-                        <img src="" style="width:100%">
                     </div>
                 </div>
             </div>
