--- a/kontakt.html
+++ b/kontakt.html
@@ -8,6 +8,7 @@
     <body>
         <div id="main">
             <div id="kontakt">
+                <button class="hamburger-z">&#9776;</button>
                 <nav id="navigacija-zeleno">
                     <div class="nav-item-z"><a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item-z"><a href="galerija.html">galerija</a></div>
