--- a/omeni.html
+++ b/omeni.html
@@ -7,6 +7,7 @@
     <body>
         <div id="main">
             <div id="omeni">
+                <button class="hamburger">&#9776;</button>
                 <nav id="navigacija">
                     <div class="nav-item"> <a href="" id="meni-dugme">meni</a></div>
                     <div class="nav-item"><a href="galerija.html">galerija</a></div>
@@ -32,7 +33,10 @@
                 <h1>O MENI</h1>
                 <p>Ćao! Ja sam Milica, dolazim iz Sremske Mitrovice. Trenutno studiram grafičko inženjerstvo i dizajn na FTN-u. Fotografija je za mene više od umetnosti – to je način da zabeležim i podelim trenutke i ljude koji su mi važni. Volim da radim sa različitim temama i stilovima, istražujem i eksperimentišem. Kada ne fotografišem, volim da čitam, putujem i slikam. Moj cilj je da nastavim da učim i rastem kao fotograf. Nadam se da će moj rad pronaći svoje mesto u svetu umetnosti i tvom srcu.</p>
             </div>
-            <footer>
+            <!-- Novi div za tekst na manjim ekranima -->
+            <div class="omeni-tekst">
+                <p>Ćao! Ja sam Milica, dolazim iz Sremske Mitrovice. Trenutno studiram grafičko inženjerstvo i dizajn na FTN-u. Fotografija je za mene više od umetnosti – to je način da zabeležim i podelim trenutke i ljude koji su mi važni. Volim da radim sa različitim temama i stilovima, istražujem i eksperimentišem. Kada ne fotografišem, volim da čitam, putujem i slikam. Moj cilj je da nastavim da učim i rastem kao fotograf. Nadam se da će moj rad pronaći svoje mesto u svetu umetnosti i tvom srcu.</p>
+            </div>            <footer>
                 <div class="footer-flex">
                     <div class="footer-levo"><p>&copy Milica Petković <br> Novi Sad, 2024</p></div>
                     <div class="footer-sredina">
