--- a/autoportret.html
+++ b/autoportret.html
@@ -2,6 +2,7 @@
 <html lang="sr">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Milica Petković - Autoportret</title>
         <link rel="stylesheet" href="style.css">
     </head>	
@@ -31,10 +32,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="autoportret-naslov">
-                    <h2>AUTOPORTRET</h2>
-                    <h1>SVAKODNEVNICE</h1>
-                </div>
+                <div id="ap-translacija1"><img src="Slike/autoportret/ap1.png"></div>
+                <div id="ap-translacija2"><img src="Slike/autoportret/ap2.png"></div> 
+                <div id="autoportret-naslov"><h2>AUTOPORTRET</h2><h1>SVAKODNEVNICE</h1></div>
             </div>
             <div id="autoportret-sredina">
                 <p>„Autoportret svakodnevnice“ je autobiografska serija koja kroz osam pažljivo odabranih kadrova beleži tihi, gotovo neprimetni tok dana. Svaka fotografija prikazuje trenutke koji se ponavljaju, gde se ništa dramatično ne dešava, otkrivajući tihu monotoniju svakodnevnice.</p>
