--- a/hekly.html
+++ b/hekly.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Milica Petković - Hekly</title>
         <link rel="stylesheet" href="style.css">
     </head>	
@@ -33,6 +35,11 @@
                 <div id="hekly-naslov">    
                     <h2>MILICA PETKOVIĆ</h2>
                     <h1>x HEKLY</h1>
+                </div>
+                <div id="hekly-translacija">
+                    <video autoplay loop muted controls controlsList="nofullscreen nodownload" playsinline>
+                        <source src="Slike/heklyvideo.mov" type="video/mp4">
+                    </video>
                 </div>
             </div>
             <div id="hekly-sredina">
