--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Milica Petković</title>
         <link rel="stylesheet" href="style.css">
     </head>	
@@ -45,7 +47,6 @@
                 Ako želiš da pričamo o tvojoj ideji, slobodno se javi, tu sam da zajedno stvorimo nešto što će trajati!</p>
                 <h4><a href="kontakt.html">KONTAKT</a></h4>
             </div>
-            
             <footer>
                 <div class="footer-flex">
                     <div class="footer-levo"><p>&copy Milica Petković <br> Novi Sad, 2024</p></div>
