--- a/kontakt.html
+++ b/kontakt.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Milica Petkovic - Kontakt</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -55,6 +57,14 @@
                         </div>
                         <div id="dugme-kontakt"><input type="submit" value="POŠALJI"></div>
                     </form>
+                </div>
+            </div>
+            <div id="modal-uspeh">
+                <div class="modal-sadrzaj">
+                    <span class="modal-close">&times;</span>
+                    <h3>POSLATO!</h3>
+                    <p>tvoja poruka je uspešno poslata,</br>odgovor stiže uskoro</p>
+                    <a href="homepage.html" class="modal-dugme">POČETNA</a>
                 </div>
             </div>
             <footer>
