--- a/rezirana.html
+++ b/rezirana.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="sr">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Milica Petković - Režirana</title>
         <link rel="stylesheet" href="style.css">
     </head>	
